--- a/frontend/src/pages/Dashboard/styles.css
+++ b/frontend/src/pages/Dashboard/styles.css
@@ -22,6 +22,12 @@
     margin: 30px 0 60px 0;
 }
 
+.container-dashboard h2 {
+    color: #011e40;
+    font-size: 30px;
+    margin: 30px 0;
+}
+
 .align-forms {
     width: 100%;
     display: flex;
