--- a/frontend/src/pages/Dashboard/styles.css
+++ b/frontend/src/pages/Dashboard/styles.css
@@ -40,3 +40,11 @@
     color: #011e40;
     margin-bottom: 20px;
 }
+.content-charts {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 30px;
+}
