--- a/frontend/src/pages/Login/styles.css
+++ b/frontend/src/pages/Login/styles.css
@@ -47,6 +47,8 @@
     border-radius: 5px;
     margin: 5px 0 30px 0;
     padding: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .content-form button,
